[package]
name = "fredtechton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.4"
include_dir = "0.7.2"
reqwest = "0.11.10"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = {version="1.18.1", features = ["full"]}
