[package]
name = "fredtechton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
mdbook = "0.4"

[dependencies]
axum = "0.5.4"
include_dir = "0.7.2"
mdbook = "0.4.18"
mime_guess = "2.0.4"
reqwest = "0.11.10"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = {version="1.18.1", features = ["full"]}
